--- a/templates/base.html
+++ b/templates/base.html
@@ -27,10 +27,10 @@
                     {% if session.user|lower == "admin"|lower %}
                         <li><a href="#">Manage Categories</a></li>
                     {% endif %}
-                    <li><a href="">Log Out</a></li>
+                    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                 {% else %}
-                    <li><a href="">Log In</a></li>
-                    <li><a href="">Register</a></li>
+                    <li><a href="{{ url_for('login') }}">Log In</a></li>
+                    <li><a href="{{ url_for('register') }}">Register</a></li>
                 {% endif %}
             </ul>
             </div>
@@ -39,17 +39,17 @@
         <!-- mobile sidenav -->
         <ul class="sidenav" id="mobile-demo">
             <li><h4 class="center-align light-blue-text text-darken-4">Task Manager</h4></li>
-            <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+            <li><a href="#">Home</a></li>
             {% if session.user %}
                 <li><a href="#">Profile</a></li>
                 <li><a href="#">New Quiz</a></li>
                 {% if session.user|lower == "admin"|lower %}
                     <li><a href="#">Manage Categories</a></li>
                 {% endif %}
-                <li><a href="">Log Out</a></li>
+                <li><a href="{{ url_for('logout') }}">Log Out</a></li>
             {% else %}
-                <li><a href="">Log In</a></li>
-                <li><a href="">Register</a></li>
+                <li><a href="{{ url_for('login') }}">Log In</a></li>
+                <li><a href="{{ url_for('register') }}">Register</a></li>
             {% endif %}
         </ul>
     </header>
