--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
                 <li><a href="#">Profile</a></li>
                 <li><a href="#">New Quiz</a></li>
                 {% if session.user|lower == "admin"|lower %}
-                    <li><a href="#">Manage Categories</a></li>
+                    <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Admin<i class="fas fa-caret-down"></i></a></li>
                 {% endif %}
                 <li><a href="{{ url_for('logout') }}">Log Out</a></li>
             {% else %}
