--- a/templates/base.html
+++ b/templates/base.html
@@ -24,12 +24,16 @@
                 {% if session.user %}
                     <li><a href="#">Profile</a></li>
                     <li><a href="#">New Quiz</a></li>
-                    {% if session.user|lower == "admin"|lower %}
+                    {% if session.user_role == "global admin" %}
                         <ul id="nav-admin-dropdown" class="dropdown-content">
                             <li><a href="{{ url_for('admin_users') }}">Users</a></li>
                             <li><a href="#!">Content</a></li>
                         </ul>
                         <li><a class="dropdown-trigger" href="#!" data-target="nav-admin-dropdown">Admin<i class="fas fa-caret-down"></i></a></li>
+                    {% elif session.user_role == "user admin" %}
+                        <li><a href="{{ url_for('admin_users') }}">User Admin</a></li>
+                    {% elif session.user_role == "content admin" %}
+                        <li><a href="#!">Content Admin</a></li>
                     {% endif %}
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                 {% else %}
@@ -47,12 +51,16 @@
             {% if session.user %}
                 <li><a href="#">Profile</a></li>
                 <li><a href="#">New Quiz</a></li>
-                {% if session.user|lower == "admin"|lower %}
+                {% if session.user_role|lower == "global admin"|lower %}
                     <ul id="sidenav-admin-dropdown" class="dropdown-content">
                         <li><a href="{{ url_for('admin_users') }}">Users</a></li>
                         <li><a href="#!">Content</a></li>
                     </ul>
                     <li><a class="dropdown-trigger" href="#!" data-target="sidenav-admin-dropdown">Admin<i class="fas fa-caret-down"></i></a></li>
+                {% elif session.user_role == "user admin" %}
+                    <li><a href="{{ url_for('admin_users') }}">User Admin</a></li>
+                {% elif session.user_role == "content admin" %}
+                    <li><a href="#!">Content Admin</a></li>
                 {% endif %}
                 <li><a href="{{ url_for('logout') }}">Log Out</a></li>
             {% else %}
