--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
                 <!-- email -->
                 <div class="row">
                     <div class="input-field col s12">
-                        <i class="fas fa-at prefix light-blue-text text-darken-4"></i>
+                        <i class="fas fa-envelope prefix light-blue-text text-darken-4"></i>
                         <input id="email" name="email" type="email" class="validate" required>
                         <label for="email">Email</label>
                     </div>
