--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,3 +48,69 @@ nav .fa-caret-down {
 	font-size: 1.6rem;
 	text-align: center;
 }
+
+.modal {
+    min-width: 300px;
+    max-width: 512px;
+}
+
+form .modal-content .row {
+    margin-bottom: 10px;
+}
+
+.modal-title-row h4 {
+    margin-bottom: 0;
+}
+
+.modal-close-button {
+    line-height: 1;
+    font-weight: 700;
+    padding-right: 0;
+    font-size: 2rem;
+    text-align: right;
+    margin-top: -.5rem;  
+}
+
+form .modal-content .input-field {
+    margin-bottom: 0;
+}
+
+.user-locked-container {
+    height: 54px;
+    margin-top: 0;
+}
+
+.user-locked-container label {
+    position: initial;
+    display: inline-block;
+    width: calc(100% - 3rem) !important;
+    height: calc(3rem + 1px);
+    line-height: calc(3rem + 1px);
+    border-bottom: 1px solid #9e9e9e;
+	margin-bottom: 8px;	
+    margin-top: -1rem;
+}
+
+.user-locked-container label span {
+    padding-left: 25px !important;
+    color: #000;
+}
+
+.user-locked-container label .user-locked-divider {
+    border-bottom: 1px solid #9e9e9e;
+    margin-top: 8px;
+}
+
+/* Style the materialize checkbox color to match our primary font color */
+[type="checkbox"]:checked + span:not(.lever)::before {
+    border-right: 2px solid #01579b;
+    border-bottom: 2px solid #01579b;
+}
+
+.modal-action-container {
+    margin-bottom: 0 !important;
+}
+
+.modal-action-container button, .modal-action-container button i {
+    font-size: 1.2rem;
+}
