--- a/templates/register.html
+++ b/templates/register.html
@@ -5,16 +5,16 @@
     <h3 class="center-align">Register</h3>
     
     <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
+        <form id="register" class="col s12 m8 offset-m2 formValidate" method="POST" action="{{ url_for('register') }}">
             <div class="card-panel">
                 <!-- email -->
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="fas fa-envelope prefix light-blue-text text-darken-4"></i>
                         <input id="email" name="email" type="email" class="validate" required>
-                        <label for="email">Email</label>
+                        <label for="email">Email Address</label>
                     </div>
-                </div>                
+                </div>
                 <!-- username -->
                 <div class="row">
                     <div class="input-field col s12">
@@ -29,11 +29,21 @@
                         <i class="fas fa-user-lock prefix light-blue-text text-darken-4"></i>
                         <input id="pwd" name="pwd" type="password" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="pwd">Password</label>
+                        <span class="helper-text" data-error="Invalid Password."></span>
+                    </div>
+                </div>
+                 <!-- password confirmation -->
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="fas fa-user-lock prefix light-blue-text text-darken-4"></i>
+                        <input id="cPwd" name="cPwd" type="password" required>
+                        <label for="cPwd">Password Confirmation</label>
+                        <span id="cPwdHlp" class="helper-text" data-error=""></span>
                     </div>
                 </div>
                 <!-- register -->
                 <div class="row">
-                    <button type="submit" class="col s12 btn-large light-blue darken-4 text-shadow">
+                    <button type="submit" class="col s12 btn-large light-blue darken-4 text-shadow" onsubmit="return pWordValidation('#pwd', '#cPwd');">
                         Register <i class="fas fa-sign-in-alt"></i>
                     </button>
                 </div>
