--- a/templates/register.html
+++ b/templates/register.html
@@ -43,7 +43,7 @@
                 </div>
                 <!-- register -->
                 <div class="row">
-                    <button type="submit" class="col s12 btn-large light-blue darken-4 text-shadow" onsubmit="return pWordValidation('#pwd', '#cPwd');">
+                    <button type="submit" class="col s12 btn-large light-blue darken-4 text-shadow" onsubmit="return pWordValidation('pwd', 'cPwd');">
                         Register <i class="fas fa-sign-in-alt"></i>
                     </button>
                 </div>
