--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -69,6 +69,7 @@
                                                                                 <i class="fas fa-user-lock prefix light-blue-text text-darken-4"></i>
                                                                                 <input id="{{ user.user_id }}-pwd" name="pwd" type="password" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                                                                                 <label for="{{ user.user_id }}-pwd">Password</label>
+                                                                                <span class="helper-text" data-error="Invalid Password."></span>
                                                                             </div>
                                                                         </div>
                                                                         <!-- password confirmation -->
